--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
         <h1>
             Banana Talk
         </h1>
+        <br>
+        <button id="btn-translate"> Translate </button>
     </center>
+
+    <script src="app.js" type="text/javascript"></script>
     
 </body>
 </html>
