--- a/index.html
+++ b/index.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Talk</title>
-    <script>
 
-    </script>
+    <!-- including css sheet -->
+    <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
     <center>
         <h1>
             Banana Talk
         </h1>
+        
+        <textarea placeholder="Put your Sentence here we will Convert it into Banana Language"
+            id="txt-input"></textarea>
+        <button id="btn-translate">Translate Text</button>
+        <div>
+            Your Translated Sentence will be Display here 👇
+        </div>
         <br>
-        <button id="btn-translate"> Translate </button>
+        <div id="txt-output">
+
+        </div>
+
     </center>
 
     <script src="app.js" type="text/javascript"></script>
-    
+
 </body>
+
 </html>
