Done with Translation Part testing in progress...

--- a/index.html
+++ b/index.html
@@ -13,20 +13,30 @@
 
 <body>
     <center>
-        <h1>
+        <!-- <h1>
             Banana Talk
         </h1>
         
-        <textarea placeholder="Put your Sentence here we will Convert it into Banana Language"
+        <textarea placeholder="Put your Sentence here we will Convert it into Minion's Language"
             id="txt-input"></textarea>
         <button id="btn-translate">Translate Text</button>
         <div>
-            Your Translated Sentence will be Display here 👇
+            <h2>
+
+                Your Translated Sentence will be Display here 👇
+            </h2>
         </div>
         <br>
         <div id="txt-output">
 
-        </div>
+        </div> -->
+        <h1> Banana Talk</h1>
+        <textarea id="txt-input"
+            placeholder="put your sentence in English here and we will convert it to banana"></textarea>
+        <button id="btn-translate">Translate</button>
+    
+        <div style="font-size: larger;"> Output will come here 👇</div>
+        <div id="output"></div>
 
     </center>
 
